fixed buttons sometimes not showing up properly

--- a/css/game.css
+++ b/css/game.css
@@ -243,7 +243,6 @@
 
   min-width: calc(300% + 2px);
   border-radius: 10px;
-  z-index: -100;
 
   text-align: center;
 
